--- a/public/views/main.hbs
+++ b/public/views/main.hbs
@@ -1,10 +1,10 @@
-<h2 class="text-center my-4">Lista de productos</h2>
+<h2 class="text-center my-4">Current product list</h2>
 {{#if stockExists}}
 <table class="table table-dark text-center"  style="max-width: 800px; margin: 15px auto">
     <tr>
-        <th>Producto</th>
-        <th>Precio</th>
-        <th>Imagen</th>
+        <th>Product</th>
+        <th>Price</th>
+        <th>Image</th>
     </tr>
     {{#each displayProducts}}
     <tr class="product text-dark table-light text-center">
@@ -15,8 +15,9 @@
     {{/each}}
 </table>
 {{else}}
-<span>No se detectaron productos</span>
+<span>No products detected</span>
 {{/if}}
 <div class="d-flex justify-content-center my-2">
-    <button type="button" class="btn btn-dark" onclick="location.href='/api/nuevoproducto'"> Añadir nuevo producto</button>
+    <button type="button" class="btn btn-dark" onclick="location.href='/nuevoproducto'"> Add new product</button>
 </div>
+<script src="../js/main.js"></script>
