--- a/public/views/main.hbs
+++ b/public/views/main.hbs
@@ -17,7 +17,7 @@
 {{else}}
 <span>No products detected</span>
 {{/if}}
-<div class="d-flex justify-content-center my-2">
+<!--- <div class="d-flex justify-content-center my-2">
     <button type="button" class="btn btn-dark" onclick="location.href='/nuevoproducto'"> Add new product</button>
-</div>
+</div>  --->
 <script src="../js/main.js"></script>
