--- a/public/views/main.hbs
+++ b/public/views/main.hbs
@@ -3,14 +3,12 @@
 <table class="table table-dark text-center"  style="max-width: 800px; margin: 15px auto">
     <tr>
         <th>Product</th>
-        <th>Desc</th>
         <th>Price</th>
         <th>Image</th>
     </tr>
     {{#each displayProducts}}
     <tr class="product text-dark table-light text-center">
         <td>{{this.title}}</td>
-        <td>{{this.desc}}</td>
         <td>${{this.price}}</td>
         <td><img src={{this.thumbnail}} width="40px" alt="Product"></td>
     </tr>
@@ -22,4 +20,4 @@
 <!--- <div class="d-flex justify-content-center my-2">
     <button type="button" class="btn btn-dark" onclick="location.href='/nuevoproducto'"> Add new product</button>
 </div>  --->
-<script src="../js/socket.js"></script>
+<!---  <script src="../js/socket.js"></script> --->
