--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -14,10 +14,11 @@
 <body>
 
   <div class="container my-5">
-    <div class=jumbotron>
-      <h1>LOGIN</h1>
+    <div class="jumbotron">
+
+      <h1>SIGNUP</h1>
       <br>
-      <form class="form" role="form" action="/login" method="post" autocomplete="off">
+      <form class="form" role="form" action="/signup" method="post" autocomplete="off">
 
         <div class="form-group">
           <input name='username' placeholder="Nombre" class="form-control" type="text" required>
@@ -26,28 +27,27 @@
           <input name='password' placeholder="Password" class="form-control" type="password" required>
         </div>
 
+        <br>
+
         <div class="form-group">
-          <input class="btn btn-success my-3" type="submit" value="Login">
+          <input name='firstName' placeholder="firstname" class="form-control" type="text" required>
+        </div>
+
+        <div class="form-group">
+          <input name='lastName' placeholder="lastname" class="form-control" type="text" required>
+        </div>
+
+        <div class="form-group">
+          <input name='email' placeholder="email" class="form-control" type="email" required>
+        </div>
+
+        <div class="form-group">
+          <input class="btn btn-success my-3" type="submit" value="Singup">
         </div>
       </form>
 
-      <hr>
-      <div class="text-center"></div>
-      <button class="btn btn-success my-3" onclick="goSignup()">SIGNUP</button>
     </div>
   </div>
-
-  <script>
-    function redireccionar(pagina) {
-      location.href = pagina;
-    }
-
-    function goSignup() {
-      redireccionar('/signup');
-    }
-  </script>
-
-
 
 </body>
 
