--- a/public/views/login.html
+++ b/public/views/login.html
@@ -20,7 +20,7 @@
       <form class="form" role="form" action="/login" method="post" autocomplete="off">
 
         <div class="form-group">
-          <input name='username' placeholder="Nombre" class="form-control" type="text" required>
+          <input name='username' placeholder="Email" class="form-control" type="email" required>
         </div>
         <div class="form-group">
           <input name='password' placeholder="Password" class="form-control" type="password" required>
