--- a/public/views/main.hbs
+++ b/public/views/main.hbs
@@ -5,18 +5,21 @@
         <th>Product</th>
         <th>Price</th>
         <th>Image</th>
+        <th></th>
     </tr>
     {{#each displayProducts}}
     <tr class="product text-dark table-light text-center">
         <td>{{this.title}}</td>
         <td>${{this.price}}</td>
         <td><img src={{this.thumbnail}} width="40px" alt="Product"></td>
+        <td><a type="button" class="btn btn-primary" onclick="addProductToCart('{{this._id}}')">Add to cart</a></td>
     </tr>
     {{/each}}
 </table>
 {{else}}
 <span>No products detected</span>
 {{/if}}
+
 <!--- <div class="d-flex justify-content-center my-2">
     <button type="button" class="btn btn-dark" onclick="location.href='/nuevoproducto'"> Add new product</button>
 </div>  --->
