--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -18,10 +18,10 @@
 
       <h1>SIGNUP</h1>
       <br>
-      <form class="form" role="form" action="/signup" method="post" autocomplete="off">
+      <form class="form" role="form" action="/signup" method="post" autocomplete="off" enctype="multipart/form-data">
 
         <div class="form-group">
-          <input name='username' placeholder="Nombre" class="form-control" type="text" required>
+          <input name='username' placeholder="Email" class="form-control" type="email" required>
         </div>
         <div class="form-group">
           <input name='password' placeholder="Password" class="form-control" type="password" required>
@@ -30,19 +30,27 @@
         <br>
 
         <div class="form-group">
-          <input name='firstName' placeholder="firstname" class="form-control" type="text" required>
+          <input name='firstName' placeholder="Firstname" class="form-control" type="text" required>
         </div>
 
         <div class="form-group">
-          <input name='lastName' placeholder="lastname" class="form-control" type="text" required>
+          <input name='lastName' placeholder="Lastname" class="form-control" type="text" required>
         </div>
 
         <div class="form-group">
-          <input name='email' placeholder="email" class="form-control" type="email" required>
+          <input name='usernameId' placeholder="Username" class="form-control" type="text" required>
         </div>
 
         <div class="form-group">
-          <input class="btn btn-success my-3" type="submit" value="Singup">
+          <input name='phone' placeholder="Phone - Enter your prefix without symbols" class="form-control" type="number" required>
+        </div>
+
+        <div class="form-group">
+          <input name='upload' placeholder="Profile Picture" class="form-control" type="file" required>
+        </div>
+
+        <div class="form-group">
+          <input class="btn btn-success my-3" type="submit" value="Signup">
         </div>
       </form>
 
