Routing, DB and service changes

--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -19,41 +19,15 @@
                 <button class="btn btn-warning float-right mt-2" onclick="location.href='/logout'">
                     logout
                 </button>
+            <h2 class="alert alert-warning">Server Mode: {{mode}}</h2>
         </h1>
     </div>
-    <h1 class="text-center m-5">Welcome to the products database</h1>
-    <!---<h2 class="text-center m-3">Add the new product information</h2> --->
-    <div class="d-flex justify-content-center" ></div>
-        <form hidden> <!---action="/productos" method="POST"> --->
-            <div class="text-primary d-flex justify-content-center align-items-center"><p style="width: 150px; display: inline;">Product name <p><input type="text" name="title" id="newProdName"></div>
-            <div class="text-primary d-flex justify-content-center align-items-center"><p style="width: 150px; display: inline;">Price: <p><input type="number" name="price" id="newProdPrice"></div>
-            <div class="text-primary d-flex justify-content-center align-items-center"><p style="width: 150px; display: inline;">Desc: <p><input type="text" name="price" id="newProdDesc"></div>
-            <div class="text-primary d-flex justify-content-center align-items-center"><p style="width: 150px; display: inline;">Image Url<p><input type="text" name="thumbnail" id="newProdThumbnail"></div>
-            <div class="text-primary d-flex justify-content-center align-items-center"><p style="width: 150px; display: inline;">code: <p><input type="text" name="price" id="newProdCode"></div>
-            <div class="text-primary d-flex justify-content-center align-items-center"><p style="width: 150px; display: inline;">stock: <p><input type="number" name="price" id="newProdStock"></div>
-            <div class="d-flex justify-content-center align-items-center">
-            <button type="button" class="btn btn-dark m-2" style="max-height: 30px;" id="addProdBtn">Add</button>
-            <!--- <button type="button" class="btn btn-dark" onclick="location.href='/productos'" style="max-height: 30px;"> Ver productos</button> --->
-            </div>
-        </form>
-    </div>
-    <div id="itemsDisplay">
-
-    </div>
-    <div id="cartDisplay">
-    </div>
-    <div id="confirmedCartDisplay" class="d-flex align-items-center border border border-success rounded-3 flex-column" style="max-width: 700px; margin: 10px auto">
-    </div>
+    <h1 class="text-center m-5">Welcome! Please use the chat below in case you need to contact us!</h1>
     <div style="margin-left: auto; margin-right: auto;">
         <h2 class="text-center my-4">Chat</h2>
         <form class="d-flex justify-content-center">
             <input type="email" id="user" placeholder="Email" class="border border-primary rounded-3 mx-1" required>
-            <input type="text" id="name" placeholder="name" class="border border-primary rounded-3 mx-1" required>
-            <input type="text" id="surname" placeholder="Surname" class="border border-primary rounded-3 mx-1" required>
-            <input type="number" id="age" placeholder="Age" class="border border-primary rounded-3 mx-1" required>
-            <input type="text" id="alias" placeholder="Alias" class="border border-primary rounded-3 mx-1" required>
             <input type="text" name="text" id="text" placeholder="Write your message" class="border border-primary rounded-3 mx-1">
-            <input type="text" id="avatar" placeholder="avatar" class="border border-primary rounded-3 mx-1" required>
             <input type="button" id="chatForm" value="Send" class="btn btn-dark border-primary mx-1">
         </form>
         <div id="messages" class="d-flex align-items-center border border-primary rounded-3 flex-column" style="max-width: 600px; margin: 10px auto" >
@@ -62,6 +36,5 @@
         </div>
     </div>
     <script src="../js/socket.js"></script>
-    <script src="../js/cart.js"></script>
 </body>
 </html>
