--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -24,15 +24,15 @@
           <input name='username' placeholder="Email" class="form-control" type="email" required>
         </div>
         <div class="form-group">
-          <input name='password' placeholder="Password" class="form-control" type="password" required>
+          <input name='password' placeholder="Password" class="form-control" type="password" id="password1" required>
         </div>
-
-        <br>
-
+        <div class="form-group">
+          <input name='password2' placeholder="Repeat Password" class="form-control" type="password" id="password2" required>
+          <p id="pswdMiss" style="color: red">Passwords mismatch</p>
+        </div>
         <div class="form-group">
           <input name='firstName' placeholder="Firstname" class="form-control" type="text" required>
         </div>
-
         <div class="form-group">
           <input name='lastName' placeholder="Lastname" class="form-control" type="text" required>
         </div>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="form-group">
-          <input class="btn btn-success my-3" type="submit" value="Signup">
+          <input class="btn btn-success my-3" type="submit" value="Signup" id="passwordCheck" disabled>
         </div>
       </form>
 
@@ -58,5 +58,7 @@
   </div>
 
 </body>
+
+<script src="../js/password.js"></script>
 
 </html>
